# axi-ethernet

./: Cargo.toml  README.md
axi-ethernet-pac/: Cargo.toml  axiethernet.svd  cmsis-svd.xsd
axi-ethernet-pac/src/: axi_ethernet.rs  lib.rs
axi-ethernet-pac/src/axi_ethernet/: af0.rs  af1.rs  ar.rs  emmc.rs  fmi.rs  id.rs  ie.rs  ifgp.rs  ip.rs  is.rs  mcasttable.rs  mdiomc.rs  mdiomcr.rs  mdiomic.rs  mdiomie.rs  mdiomip.rs  mdiomis.rs  mdiomrd.rs  mdiomwd.rs  phyc.rs  ppst.rs  raf.rs  rtag.rs  rx1024bl.rs  rx1024bu.rs  rx128b255l.rs  rx128b255u.rs  rx256b511l.rs  rx256b511u.rs  rx512b1023l.rs  rx512b1023u.rs  rx64bl.rs  rx64bu.rs  rx65b127l.rs  rx65b127u.rs  rxaerl.rs  rxaeru.rs  rxbcstfl.rs  rxbcstfu.rs  rxbl.rs  (+82 more)
src/: axiethernet.rs  config.rs  hw.rs  lib.rs  phy_ksz9031rnx.rs
