[package]
name = "axi-ethernet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# riscv = { git = "https://github.com/zflcs/pac/tree/main/axi-ethernet-pac" }
axi-ethernet-pac = { path = "../pac/axi-ethernet-pac"}
log = "0.4"
